@@ -1,6 +1,7 @@
 
 
 - build: support for Linux 2.6.31-rc1
+- quota2: support nameless counters
 
 
 Xtables-addons 1.17 (June 16 2009)
